# Autonomous_grass_cutter

./: README.md  launch.py  spiral_grass_cutter.py  spiral_node.py
src/: spiral_node.py
src/AZZA_bringup/: CMakeLists.txt  package.xml
src/AZZA_bringup/launch/: number_app.launch.py
src/boundry_publisher/: CMakeLists.txt  package.xml
src/boundry_publisher/install/: local_setup.sh  setup.ps1  setup.sh
src/boundry_publisher/install/boundary_publisher/lib/boundary_publisher/: boundary_publisher  boundary_publisher_node
src/boundry_publisher/install/boundary_publisher/share/ament_index/resource_index/parent_prefix_path/: boundary_publisher
src/boundry_publisher/install/boundary_publisher/share/boundary_publisher/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/boundry_publisher/log/: latest_build
src/boundry_publisher/src/: boundary_publisher.cpp  coordinates.csv
src/control_node/: CMakeLists.txt  package.xml
src/control_node/src/: control_node.cpp
src/for_rasperry/: all_nodes_launch.py
src/for_rasperry/control_node/: CMakeLists.txt  package.xml
src/for_rasperry/control_node/launch/: control_node_launch.py
src/for_rasperry/control_node/src/: control_node.cpp
src/for_rasperry/my_sensor_pkg/: CMakeLists.txt  package.xml
src/for_rasperry/my_sensor_pkg/install/: setup.sh
src/for_rasperry/my_sensor_pkg/install/my_sensor_pkg/share/my_sensor_pkg/: package.bash  package.dsv  package.zsh
src/for_rasperry/my_sensor_pkg/src/: encoder_node.cpp  imu_node.cpp
src/for_rasperry/robot-localization(13)/: CMakeLists.txt  build_and_run.sh  debug_build.sh  debug_script.sh  launch_raspberry_localization.sh  numpy_compatibility.py  package.xml  run_localization.py  run_node.py  run_node.sh  run_with_launch.sh  setup.py  simple_build.sh  start_localization.sh  start_raspberry_localization.sh  test_node.py
src/for_rasperry/robot-localization(13)/config/: localization_params.yaml
src/for_rasperry/robot-localization(13)/launch/: all_localization_nodes.launch.py  localization.launch.py  localization_launch.py  odom_imu_fusion_launch.py  odom_tf_fusion_launch.py  raspberry_localization.launch.py  robot_localization_launch.py  simple_launch.py
src/for_rasperry/robot-localization(13)/resource/: robot_localization
src/for_rasperry/robot-localization(13)/robot_localization/: __init__.py  localization_node.py  numpy_compat.py  numpy_fix.py  odom_imu_fusion_node.py  odom_tf_fusion_node.py  raspberry_localization_node.py  standard_localization_node.py
src/for_rasperry/robot-localization(13)/scripts/: launch_localization.py  localization_diagnostics.py  localization_node.py  raspberry_localization_node  raspberry_localization_wrapper  ros2_localization_node.py  sensor_fusion_config.py
src/for_rasperry/robot-localization(13)/src/: localization_node.cpp  odom_imu_fusion_node.cpp  odom_tf_fusion_node.cpp  raspberry_localization_node.cpp  spiral_node.cpp  standard_localization_node.cpp
src/for_rasperry/spiral_motion/: package.xml  rasperry_real_workandnoiseditations.text  setup.cfg  setup.py
src/for_rasperry/spiral_motion/spiral_motion/: spiral_node.py
src/launch_pkg/: bringup.launch.py  package.xml  setup.py
src/launch_pkg/launch/: sim.launch.py
src/launch_pkg/launch_pkg/: boundary_publisher.py  location_subscriber.py  turtle_pose_to_gps.py  ultrasonic_node.py  velocity_publisher.py
src/lc29h_gps_rtk-main/: exe_name&file param .text
src/lc29h_gps_rtk-main/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/lc29h_gps_rtk-main/install/lc29h_gps_rtk/lib/lc29h_gps_rtk/: lc29h_gps_rtk_node
src/lc29h_gps_rtk-main/install/lc29h_gps_rtk/share/ament_index/resource_index/package_run_dependencies/: lc29h_gps_rtk
src/lc29h_gps_rtk-main/install/lc29h_gps_rtk/share/ament_index/resource_index/parent_prefix_path/: lc29h_gps_rtk
src/lc29h_gps_rtk-main/install/lc29h_gps_rtk/share/lc29h_gps_rtk/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/lc29h_gps_rtk-main/log/: latest_build
src/libHCSR04_ros/include/libHCSR04_ros/: UltrasonicHCSR04Wrapper.hpp
src/libHCSR04_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/libHCSR04_ros/install/lib_hcsr04_ros/share/lib_hcsr04_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/libHCSR04_ros/log/: latest_build
src/libHCSR04_ros/src/: RunUltrasonicHCSR04Wrapper.cpp  UltrasonicHCSR04Wrapper.cpp
src/model_description/models/: model.sdf  model_copy.sdf
src/my_sensor_pkg/: CMakeLists.txt
src/my_sensor_pkg/install/: local_setup.sh
src/my_sensor_pkg/install/my_sensor_pkg/lib/my_sensor_pkg/: imu_encoder_node
src/my_sensor_pkg/install/my_sensor_pkg/share/my_sensor_pkg/: local_setup.sh  package.ps1  package.sh
src/my_sensor_pkg/log/: latest_build
src/my_sensor_pkg/src/: encoder.cpp  imu_encoder_node.cpp  imu_node.cpp
src/robot_localization/params/: ekf.yaml
src/spiral_motion/: setup.py
src/spiral_motion/spiral_motion/: gps_tracker.py  spiral_node.py
src/ultrasonic_listener/: CMakeLists.txt  package.xml
src/ultrasonic_listener/src/: ultrasonic_listener.cpp
