<?xml version="1.0"?>
<package format="3">
  <name>boundary_publisher</name>
  <version>0.0.1</version>
  <description>Publishes a sequence of boundary coordinates as Point messages.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <!-- for automatic linting (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

